--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,6 +1,7 @@
 {
 	"comments": {
-		"lineComment": "--"
+		"lineComment": "--",
+		"blockComment": [ "--[[", "]]" ]
 	},
 	"brackets": [
 		["[", "]"],
@@ -12,7 +13,9 @@
 		{ "open": "(", "close": ")" },
 		{ "open": "{", "close": "}", "notIn": ["string", "comment"] },
 		{ "open": "'", "close": "'", "notIn": ["string", "comment"] },
-		{ "open": "\"", "close": "\"", "notIn": ["string"] }
+		{ "open": "\"", "close": "\"", "notIn": ["string"] },
+		{ "open": "/*", "close": "\n\n*/", "notIn": ["string", "comment"] },
+		{ "open": "--[[", "close": "\n\n]]", "notIn": ["string", "comment"] }
 	],
 	"surroundingPairs": [
 		["[", "]"],
