--- a/package.json
+++ b/package.json
@@ -257,20 +257,20 @@
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "tslint": "^5.8.0",
-        "typescript": "^4.0.2",
-        "@types/vscode": "^1.27.0",
         "@types/mocha": "^7.0.2",
         "@types/node": "^13.11.1",
+        "@types/vscode": "^1.27.0",
         "download": "^7.1.0",
-        "filecopy": "^4.0.2"
+        "filecopy": "^4.0.2",
+        "tslint": "^5.8.0",
+        "typescript": "^4.0.2"
     },
     "dependencies": {
-        "vscode-languageclient": "5.1.0",
-        "vscode-debugadapter": "1.31.0",
-        "vscode-debugprotocol": "1.31.0",
+        "iconv-lite": "^0.5.0",
         "lua-fmt": "^2.6.0",
         "smart-buffer": "^4.0.1",
-        "iconv-lite": "^0.5.0"
+        "vscode-debugadapter": "1.31.0",
+        "vscode-debugprotocol": "1.31.0",
+        "vscode-languageclient": "5.1.0"
     }
 }
